change training step

--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -114,8 +114,8 @@
     "        \"\"\"\n",
     "        Training step: compute loss for a single batch.\n",
     "        \"\"\"\n",
-    "        output = self(batch)  # Forward pass\n",
     "        target = batch[self.output_key]  # Always use the summary as the target\n",
+    "        output = self(batch, targets=target, use_teacher_forcing=True)  # Forward pass\n",
     "\n",
     "        # Use the target's length to trim or adjust the output\n",
     "        target_length = target.size(1)  # Assuming target is of shape (batch_size, target_length)\n",
