change train/valid step

--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -114,52 +114,50 @@
     "        \"\"\"\n",
     "        Training step: compute loss for a single batch.\n",
     "        \"\"\"\n",
-    "        target = batch[self.output_key]  # Always use the summary as the target\n",
-    "        output = self(batch, targets=target, use_teacher_forcing=True)  # Forward pass\n",
+    "        target = batch[self.output_key]\n",
     "\n",
-    "        # Use the target's length to trim or adjust the output\n",
-    "        target_length = target.size(1)  # Assuming target is of shape (batch_size, target_length)\n",
+    "        # Decide whether to use teacher forcing based on a random threshold\n",
+    "        use_teacher_forcing = torch.rand(1).item() < 0.8\n",
     "\n",
-    "        # Trim the output to match the target length\n",
-    "        output = output[:, :target_length, :]  # (batch_size, target_length, vocab_size)\n",
+    "        if use_teacher_forcing:\n",
+    "            # Teacher forcing: GPT computes the loss internally\n",
+    "            loss = self(batch, targets=target, use_teacher_forcing=True)\n",
+    "        else:\n",
+    "            # Autoregressive generation: GPT returns token IDs, we need to compute the loss manually\n",
+    "            output = self(batch, use_teacher_forcing=False)\n",
     "\n",
-    "        # Reshape output and target to match the requirement of CrossEntropyLoss\n",
-    "        output = output.reshape(-1, output.size(-1))  # Reshape to (batch_size * target_length, vocab_size)\n",
-    "        target = target.reshape(-1)  # Reshape to (batch_size * target_length)\n",
+    "            # We need to compare the generated output (token IDs) with the target token IDs.\n",
+    "            # Since output from `generate()` is token IDs, no need to reshape\n",
+    "            target = target[:, 1:]  # Shift target to ignore the first token (for autoregressive prediction)\n",
     "\n",
-    "        # Compute the training loss\n",
-    "        loss = self.loss(output, target)  # CrossEntropyLoss expects (N, C) and (N), where C is vocab_size\n",
-    "        \n",
-    "        # Log the training loss\n",
+    "            # Compute the loss manually by comparing output tokens with target tokens\n",
+    "            loss = self.loss(output[:, :target.size(1)], target)\n",
+    "\n",
+    "        # Log the loss\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
-    "        \n",
+    "\n",
     "        return loss\n",
     "\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):\n",
     "        \"\"\"\n",
     "        Validation step: compute validation loss for a single batch.\n",
-    "        Adjust output to match the length of the target.\n",
     "        \"\"\"\n",
-    "        output = self(batch)  # Forward pass\n",
-    "        target = batch[self.output_key]  # Always use the summary as the target\n",
+    "        target = batch[self.output_key]\n",
     "\n",
-    "        # Use the target's length to trim or adjust the output\n",
-    "        target_length = target.size(1)  # Assuming target is of shape (batch_size, target_length)\n",
-    "        \n",
-    "        # Trim the output to match the target length\n",
-    "        output = output[:, :target_length, :]  # (batch_size, target_length, vocab_size)\n",
+    "        # In validation, we typically use autoregressive generation\n",
+    "        output = self(batch, use_teacher_forcing=False)\n",
     "\n",
-    "        # Reshape output and target to match the requirement of CrossEntropyLoss\n",
-    "        output = output.reshape(-1, output.size(-1))  # Reshape to (batch_size * target_length, vocab_size)\n",
-    "        target = target.reshape(-1)  # Reshape to (batch_size * target_length)\n",
+    "        # We need to compare the generated output (token IDs) with the target token IDs.\n",
+    "        # Since output from `generate()` is token IDs, no need to reshape\n",
+    "        target = target[:, 1:]  # Shift target to ignore the first token (for autoregressive prediction)\n",
     "\n",
-    "        # Compute validation loss\n",
-    "        val_loss = self.valid_loss(output, target)  # CrossEntropyLoss expects (N, C) and (N), where C is vocab_size\n",
-    "        \n",
+    "        # Compute validation loss manually\n",
+    "        val_loss = self.valid_loss(output[:, :target.size(1)], target)\n",
+    "\n",
     "        # Log the validation loss\n",
     "        self.log(\"val_loss\", val_loss, prog_bar=True)\n",
-    "        \n",
+    "\n",
     "        return val_loss\n",
     "\n",
     "\n",
