fix train/valid step

--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -123,21 +123,24 @@
     "            # Teacher forcing: GPT computes the loss internally\n",
     "            loss = self(batch, targets=target, use_teacher_forcing=True)\n",
     "        else:\n",
-    "            # Autoregressive generation: GPT returns token IDs, we need to compute the loss manually\n",
+    "            # Autoregressive generation: no loss from GPT, so we compute it manually\n",
     "            output = self(batch, use_teacher_forcing=False)\n",
+    "            \n",
+    "            # Use the target's length to trim or adjust the output\n",
+    "            target_length = target.size(1)\n",
+    "            output = output[:, :target_length, :]  # Trim output to match target length\n",
+    "            \n",
+    "            # Reshape output and target for CrossEntropyLoss\n",
+    "            output = output.reshape(-1, output.size(-1))\n",
+    "            target = target.reshape(-1)\n",
     "\n",
-    "            # We need to compare the generated output (token IDs) with the target token IDs.\n",
-    "            # Since output from `generate()` is token IDs, no need to reshape\n",
-    "            target = target[:, 1:]  # Shift target to ignore the first token (for autoregressive prediction)\n",
-    "\n",
-    "            # Compute the loss manually by comparing output tokens with target tokens\n",
-    "            loss = self.loss(output[:, :target.size(1)], target)\n",
+    "            # Compute the loss manually\n",
+    "            loss = self.loss(output, target)\n",
     "\n",
     "        # Log the loss\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
     "\n",
     "        return loss\n",
-    "\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):\n",
     "        \"\"\"\n",
@@ -145,20 +148,25 @@
     "        \"\"\"\n",
     "        target = batch[self.output_key]\n",
     "\n",
-    "        # In validation, we typically use autoregressive generation\n",
+    "        # In validation, we typically don't use teacher forcing, so we just run autoregressive generation\n",
     "        output = self(batch, use_teacher_forcing=False)\n",
     "\n",
-    "        # We need to compare the generated output (token IDs) with the target token IDs.\n",
-    "        # Since output from `generate()` is token IDs, no need to reshape\n",
-    "        target = target[:, 1:]  # Shift target to ignore the first token (for autoregressive prediction)\n",
+    "        # Use the target's length to trim or adjust the output\n",
+    "        target_length = target.size(1)\n",
+    "        output = output[:, :target_length, :]  # Trim output to match target length\n",
+    "        \n",
+    "        # Reshape output and target for CrossEntropyLoss\n",
+    "        output = output.reshape(-1, output.size(-1))\n",
+    "        target = target.reshape(-1)\n",
     "\n",
     "        # Compute validation loss manually\n",
-    "        val_loss = self.valid_loss(output[:, :target.size(1)], target)\n",
+    "        val_loss = self.valid_loss(output, target)\n",
     "\n",
     "        # Log the validation loss\n",
     "        self.log(\"val_loss\", val_loss, prog_bar=True)\n",
     "\n",
     "        return val_loss\n",
+    "\n",
     "\n",
     "\n",
     "    def configure_optimizers(self):\n",
