--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -127,8 +127,11 @@
     "            output = self(batch, use_teacher_forcing=False)\n",
     "            \n",
     "            # Use the target's length to trim or adjust the output\n",
-    "            target_length = target.size(1)\n",
-    "            output = output[:, :target_length, :]  # Trim output to match target length\n",
+    "            # Target has shape (batch_size, target_length)\n",
+    "            # Compare the generated output tokens (output) with the target token IDs\n",
+    "            target = target[:, 1:]  # Shift target to ignore the first token (as autoregressive generation predicts next tokens)\n",
+    "\n",
+    "            output = output[:, :target.size(1), :]  # Trim output to match target length\n",
     "            \n",
     "            # Reshape output and target for CrossEntropyLoss\n",
     "            output = output.reshape(-1, output.size(-1))\n",
@@ -152,8 +155,11 @@
     "        output = self(batch, use_teacher_forcing=False)\n",
     "\n",
     "        # Use the target's length to trim or adjust the output\n",
-    "        target_length = target.size(1)\n",
-    "        output = output[:, :target_length, :]  # Trim output to match target length\n",
+    "        # Target has shape (batch_size, target_length)\n",
+    "        # Compare the generated output tokens (output) with the target token IDs\n",
+    "        target = target[:, 1:]  # Shift target to ignore the first token (as autoregressive generation predicts next tokens)\n",
+    "\n",
+    "        output = output[:, :target.size(1), :]  # Trim output to match target length\n",
     "        \n",
     "        # Reshape output and target for CrossEntropyLoss\n",
     "        output = output.reshape(-1, output.size(-1))\n",
