--- a/nbs/models.gru.ipynb
+++ b/nbs/models.gru.ipynb
@@ -79,7 +79,7 @@
     "        gru_input_size=128,  # Size of the input for the GRU (e.g., number of features in the time series)\n",
     "        **kwargs\n",
     "    ):\n",
-    "        super().__init__(\n",
+    "        super(GRUGPTModel).__init__(\n",
     "            random_seed=random_seed,\n",
     "            loss=loss,\n",
     "            tokenizer=tokenizer,\n",
@@ -336,12 +336,12 @@
     "    return trainer.callback_metrics[\"val_loss\"].item()\n",
     "\n",
     "\n",
-    "# # Running the Optuna study\n",
-    "# study = optuna.create_study(direction=\"minimize\")\n",
-    "# study.optimize(objective, n_trials=20)\n",
+    "# Running the Optuna study\n",
+    "study = optuna.create_study(direction=\"minimize\")\n",
+    "study.optimize(objective, n_trials=20)\n",
     "\n",
-    "# # Print the best hyperparameters\n",
-    "# print(study.best_params)"
+    "# Print the best hyperparameters\n",
+    "print(study.best_params)"
    ]
   },
   {
