--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -50,6 +50,7 @@
    "source": [
     "#| export\n",
     "import warnings\n",
+    "import re\n",
     "import torch\n",
     "import json\n",
     "from collections.abc import Mapping\n",
@@ -223,6 +224,13 @@
     "        self.add_attention_mask = add_attention_mask\n",
     "        self.n_groups = len(self.data_list)  # Number of time series entities\n",
     "\n",
+    "    def clean_text(self, text):\n",
+    "        # Remove duplicate spaces and newlines\n",
+    "        text = re.sub(r'\\s+', ' ', text)  # Replace multiple spaces with a single space\n",
+    "        text = text.replace('\\n', ' ')  # Replace newlines with a space\n",
+    "        text = text.strip()  # Remove leading and trailing spaces\n",
+    "        return text\n",
+    "\n",
     "    def __len__(self):\n",
     "        \"\"\"\n",
     "        Return the number of time series entities in the dataset.\n",
@@ -238,7 +246,7 @@
     "        \n",
     "        # Extract fields from the dictionary\n",
     "        temporal_series = torch.tensor(data['positive_time_series'], dtype=torch.float32)\n",
-    "        anchor_summary = data['anchor_summary']\n",
+    "        anchor_summary = self.clean_text(data['anchor_summary'])\n",
     "        country = data['country']\n",
     "        columns = data['columns']\n",
     "        sector_str = data['sector']  # This is a string representation of sectors\n",
