change to support timellm

--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -52,7 +52,7 @@
     "    def __init__(\n",
     "        self,\n",
     "        random_seed,\n",
-    "        loss,  # Loss function\n",
+    "        loss=None,  # Loss function\n",
     "        valid_loss=None,  # Validation loss (optional)\n",
     "        optimizer=torch.optim.Adam,  # Default optimizer\n",
     "        optimizer_kwargs=None,  # Additional arguments for optimizer\n",
@@ -112,61 +112,33 @@
     "\n",
     "    def training_step(self, batch, batch_idx):\n",
     "        \"\"\"\n",
-    "        Training step: compute loss for a single batch.\n",
+    "        Training step: compute loss for a single batch without teacher forcing.\n",
     "        \"\"\"\n",
     "        target = batch[self.output_key]\n",
     "\n",
-    "        # Decide whether to use teacher forcing based on a random threshold\n",
-    "        use_teacher_forcing = torch.rand(1).item() < 0.8\n",
+    "        # Autoregressive generation (always)\n",
+    "        loss = self.forward(batch, target)\n",
     "\n",
-    "        if use_teacher_forcing:\n",
-    "            # Teacher forcing: GPT computes the loss internally\n",
-    "            loss = self(batch, targets=target, use_teacher_forcing=True)\n",
-    "        else:\n",
-    "            # Autoregressive generation: no loss from GPT, so we compute it manually\n",
-    "            output = self(batch, use_teacher_forcing=False)\n",
-    "            \n",
-    "            # Use the target's length to trim or adjust the output\n",
-    "            target_length = target.size(1)\n",
-    "            output = output[:, :target_length, :]  # Trim output to match target length\n",
-    "            \n",
-    "            # Reshape output and target for CrossEntropyLoss\n",
-    "            output = output.reshape(-1, output.size(-1))\n",
-    "            target = target.reshape(-1)\n",
-    "\n",
-    "            # Compute the loss manually\n",
-    "            loss = self.loss(output, target)\n",
-    "\n",
-    "        # Log the loss\n",
+    "        # Log the training loss for monitoring\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
     "\n",
     "        return loss\n",
     "\n",
+    "\n",
     "    def validation_step(self, batch, batch_idx):\n",
     "        \"\"\"\n",
-    "        Validation step: compute validation loss for a single batch.\n",
+    "        Validation step: compute validation loss for a single batch in the text generation task.\n",
     "        \"\"\"\n",
-    "        target = batch[self.output_key]\n",
+    "        # Extract the target (i.e., ground-truth sequence) from the batch\n",
+    "        target = batch[self.output_key]  # Assuming self.output_key points to the correct target field\n",
     "\n",
-    "        # In validation, we typically don't use teacher forcing, so we just run autoregressive generation\n",
-    "        output = self(batch, use_teacher_forcing=False)\n",
+    "        # Autoregressive generation (always)\n",
+    "        loss = self.forward(batch, target)\n",
     "\n",
-    "        # Use the target's length to trim or adjust the output\n",
-    "        target_length = target.size(1)\n",
-    "        output = output[:, :target_length, :]  # Trim output to match target length\n",
-    "        \n",
-    "        # Reshape output and target for CrossEntropyLoss\n",
-    "        output = output.reshape(-1, output.size(-1))\n",
-    "        target = target.reshape(-1)\n",
+    "        # Log the validation loss for monitoring\n",
+    "        self.log(\"val_loss\", loss, prog_bar=True)\n",
     "\n",
-    "        # Compute validation loss manually\n",
-    "        val_loss = self.valid_loss(output, target)\n",
-    "\n",
-    "        # Log the validation loss\n",
-    "        self.log(\"val_loss\", val_loss, prog_bar=True)\n",
-    "\n",
-    "        return val_loss\n",
-    "\n",
+    "        return loss\n",
     "\n",
     "\n",
     "    def configure_optimizers(self):\n",
@@ -201,6 +173,13 @@
     "        np.random.seed(self.random_seed)\n",
     "        random.seed(self.random_seed)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
