change to fix size

--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -68,7 +68,7 @@
     "class TimeSeriesLoader(DataLoader):\n",
     "    \"\"\"TimeSeriesLoader DataLoader.\n",
     "    \n",
-    "    Custom DataLoader to work with time series datasets, handling dynamic padding for tokenized summaries and attention masks,\n",
+    "    Custom DataLoader to work with time series datasets, handling fixed padding for tokenized summaries and attention masks,\n",
     "    and using the tokenizer's `eos_token_id` for padding.\n",
     "    \"\"\"\n",
     "    \n",
@@ -88,7 +88,7 @@
     "    \n",
     "    def _collate_fn(self, batch):\n",
     "        \"\"\"\n",
-    "        Custom collate function to handle time series data and dynamically pad tokenized summaries with `eos_token_id`.\n",
+    "        Custom collate function to handle time series data and apply fixed padding of 768 tokens for tokenized summaries.\n",
     "        \"\"\"\n",
     "        elem = batch[0]\n",
     "        elem_type = type(elem)\n",
@@ -105,21 +105,21 @@
     "            # Collate sector information (as a list)\n",
     "            sector = [d['sector'] for d in batch]\n",
     "            \n",
-    "            # Find the maximum sequence length in the current batch for dynamic padding\n",
-    "            max_length = max([d['summary_input_ids'].size(0) for d in batch])\n",
+    "            # Fixed length for the summaries\n",
+    "            fixed_length = 768\n",
     "            \n",
-    "            # Dynamically pad summaries using eos_token_id\n",
+    "            # Pad or truncate summaries to a fixed length of 768 tokens using eos_token_id\n",
     "            eos_token_id = self.tokenizer.eos_token_id\n",
-    "            summary_input_ids = torch.stack([torch.cat([d['summary_input_ids'], \n",
-    "                                                        torch.full((max_length - d['summary_input_ids'].size(0),), \n",
+    "            summary_input_ids = torch.stack([torch.cat([d['summary_input_ids'][:fixed_length], \n",
+    "                                                        torch.full((fixed_length - min(d['summary_input_ids'].size(0), fixed_length),), \n",
     "                                                                   eos_token_id, dtype=torch.long)])\n",
     "                                             for d in batch])\n",
     "            \n",
-    "            # Dynamically pad attention masks (using 0 for padding)\n",
+    "            # Pad or truncate attention masks to the same fixed length of 768\n",
     "            attention_mask = None\n",
     "            if batch[0]['attention_mask'] is not None:\n",
-    "                attention_mask = torch.stack([torch.cat([d['attention_mask'], \n",
-    "                                                         torch.zeros(max_length - d['attention_mask'].size(0), \n",
+    "                attention_mask = torch.stack([torch.cat([d['attention_mask'][:fixed_length], \n",
+    "                                                         torch.zeros(fixed_length - min(d['attention_mask'].size(0), fixed_length), \n",
     "                                                                     dtype=torch.long)])\n",
     "                                              for d in batch])\n",
     "            \n",
@@ -129,7 +129,7 @@
     "            # Collate columns of temporal data (should remain consistent across batch)\n",
     "            temporal_cols = batch[0]['temporal_cols']\n",
     "\n",
-    "            # Return the collated batch with dynamic padding for tokenized summaries\n",
+    "            # Return the collated batch with fixed padding for tokenized summaries and attention masks\n",
     "            return dict(\n",
     "                temporal_series=temporal_series,\n",
     "                sector=sector,\n",
