--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -252,15 +252,15 @@
     "        sector_str = data['sector']  # This is a string representation of sectors\n",
     "\n",
     "        # Manually add the BOS and EOS tokens to the input summary\n",
-    "        bos_token = self.tokenizer.bos_token or self.tokenizer.cls_token  # Default to CLS if BOS isn't defined\n",
+    "        # bos_token = self.tokenizer.bos_token or self.tokenizer.cls_token  # Default to CLS if BOS isn't defined\n",
     "        eos_token = self.tokenizer.eos_token or self.tokenizer.sep_token  # Default to SEP if EOS isn't defined\n",
     "\n",
-    "        # Concatenate the BOS and EOS tokens to the summary\n",
-    "        anchor_summary_with_bos_eos = bos_token + \" \" + anchor_summary + \" \" + eos_token\n",
+    "        # Concatenate the EOS tokens to the summary\n",
+    "        anchor_summary_with_eos = anchor_summary + \" \" + eos_token\n",
     "\n",
     "        # Tokenize the summary with the specified tokenizer\n",
     "        tokenized_summary = self.tokenizer(\n",
-    "            anchor_summary_with_bos_eos,\n",
+    "            anchor_summary_with_eos,\n",
     "            max_length=self.max_length,\n",
     "            truncation=True,\n",
     "            return_tensors='pt'  # Return PyTorch tensors\n",
