revert back to eos

--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -109,13 +109,10 @@
     "            max_length = max([d['summary_input_ids'].size(0) for d in batch])\n",
     "            \n",
     "            # Dynamically pad summaries using eos_token_id\n",
-    "            pad_token = '[PAD]'\n",
-    "            self.tokenizer.add_special_tokens({'pad_token': pad_token})\n",
-    "            self.tokenizer.pad_token = pad_token\n",
-    "            \n",
+    "            eos_token_id = self.tokenizer.eos_token_id\n",
     "            summary_input_ids = torch.stack([torch.cat([d['summary_input_ids'], \n",
     "                                                        torch.full((max_length - d['summary_input_ids'].size(0),), \n",
-    "                                                                   self.tokenizer.pad_token_id, dtype=torch.long)])\n",
+    "                                                                   eos_token_id, dtype=torch.long)])\n",
     "                                             for d in batch])\n",
     "            \n",
     "            # Dynamically pad attention masks (using 0 for padding)\n",
@@ -494,9 +491,7 @@
     "        self.drop_last = drop_last\n",
     "        self.shuffle_train = shuffle_train\n",
     "\n",
-    "        pad_token = '[PAD]'\n",
-    "        self.tokenizer.add_special_tokens({'pad_token': pad_token})\n",
-    "        self.tokenizer.pad_token = pad_token\n",
+    "        self.tokenizer.pad_token = self.tokenizer.eos_token  # Ensure padding token is set\n",
     "    \n",
     "    def train_dataloader(self):\n",
     "        \"\"\"\n",
