add teacher forcing

--- a/nbs/common.base_model.ipynb
+++ b/nbs/common.base_model.ipynb
@@ -117,7 +117,7 @@
     "        target = batch[self.output_key]\n",
     "\n",
     "        # Autoregressive generation (always)\n",
-    "        loss = self.forward(batch, target)\n",
+    "        loss = self.forward(batch, target, teacher_forcing=True)\n",
     "\n",
     "        # Log the training loss for monitoring\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
@@ -133,7 +133,7 @@
     "        target = batch[self.output_key]  # Assuming self.output_key points to the correct target field\n",
     "\n",
     "        # Autoregressive generation (always)\n",
-    "        loss = self.forward(batch, target)\n",
+    "        loss = self.forward(batch, target, teacher_forcing=False)\n",
     "\n",
     "        # Log the validation loss for monitoring\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
