try lenght sampler

--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -54,8 +54,32 @@
     "import torch\n",
     "import json\n",
     "from collections.abc import Mapping\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data import Dataset, DataLoader, Sampler\n",
     "import pytorch_lightning as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LengthBasedBatchSampler(Sampler):\n",
+    "    def __init__(self, data_source, batch_size, sort_key='summary_input_ids'):\n",
+    "        self.data_source = data_source\n",
+    "        self.batch_size = batch_size\n",
+    "        self.sort_key = sort_key\n",
+    "\n",
+    "        # Sort indices by the length of `sort_key`\n",
+    "        self.sorted_indices = sorted(range(len(data_source)), key=lambda i: len(data_source[i][sort_key]))\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        # Generate batches from sorted indices\n",
+    "        batches = [self.sorted_indices[i:i + self.batch_size] for i in range(0, len(self.sorted_indices), self.batch_size)]\n",
+    "        return iter(batches)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return (len(self.data_source) + self.batch_size - 1) // self.batch_size"
    ]
   },
   {
@@ -497,12 +521,14 @@
     "        \"\"\"\n",
     "        Creates and returns a DataLoader for the training dataset.\n",
     "        \"\"\"\n",
+    "        sampler = LengthBasedBatchSampler(self.train_dataset, batch_size=self.batch_size, sort_key='summary_input_ids')\n",
     "        loader = TimeSeriesLoader(\n",
     "            self.train_dataset,\n",
     "            tokenizer=self.tokenizer,  # Pass the tokenizer\n",
     "            batch_size=self.batch_size, \n",
     "            num_workers=self.num_workers,\n",
     "            shuffle=self.shuffle_train,\n",
+    "            batch_sampler=sampler,\n",
     "            drop_last=self.drop_last\n",
     "        )\n",
     "        return loader\n",
