--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -64,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "class LengthBasedBatchSampler(Sampler):\n",
     "    def __init__(self, data_source, batch_size, sort_key='summary_input_ids'):\n",
     "        self.data_source = data_source\n",
