--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -247,7 +247,14 @@
     "        self.max_length = max_length\n",
     "        self.sorted = sorted\n",
     "        self.add_attention_mask = add_attention_mask\n",
-    "        self.n_groups = len(self.data_list)  # Number of time series entities\n",
+    "        \n",
+    "        # Filter out data entries with tokenized summary lengths < 100\n",
+    "        self.data_list = [\n",
+    "            data for data in data_list \n",
+    "            if len(tokenizer(data['anchor_summary'], max_length=max_length, truncation=True)['input_ids']) >= 100\n",
+    "        ]\n",
+    "\n",
+    "        self.n_groups = len(self.data_list)  # Update the count after filtering\n",
     "\n",
     "    def clean_text(self, text):\n",
     "        # Remove duplicate spaces and newlines\n",
