--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -154,6 +154,8 @@
     "            # Collate columns of temporal data (should remain consistent across batch)\n",
     "            temporal_cols = batch[0]['temporal_cols']\n",
     "\n",
+    "            year_range = [d['year_range'] for d in batch]\n",
+    "\n",
     "            # Return the collated batch with dynamic padding for tokenized summaries\n",
     "            return dict(\n",
     "                temporal_series=temporal_series,\n",
@@ -161,7 +163,8 @@
     "                summary_input_ids=summary_input_ids,\n",
     "                attention_mask=attention_mask,\n",
     "                country=country,\n",
-    "                temporal_cols=temporal_cols\n",
+    "                temporal_cols=temporal_cols,\n",
+    "                year_range=year_range\n",
     "            )\n",
     "\n",
     "        # Raise error if an unsupported data type is passed\n",
@@ -282,6 +285,7 @@
     "        country = data['country']\n",
     "        columns = data['columns']\n",
     "        sector_str = data['sector']  # This is a string representation of sectors\n",
+    "        year_range = data['year_range']\n",
     "\n",
     "        # Manually add the BOS and EOS tokens to the input summary\n",
     "        # bos_token = self.tokenizer.bos_token or self.tokenizer.cls_token  # Default to CLS if BOS isn't defined\n",
@@ -310,7 +314,8 @@
     "            'summary_input_ids': input_ids,      # Tokenized summary\n",
     "            'attention_mask': attention_mask,    # Attention mask (if applicable)\n",
     "            'country': country,                  # Static feature (country)\n",
-    "            'temporal_cols': columns             # Names of temporal features\n",
+    "            'temporal_cols': columns,            # Names of temporal features\n",
+    "            'year_range': year_range\n",
     "        }\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -539,12 +544,12 @@
     "            # batch_sampler=sampler,\n",
     "            drop_last=self.drop_last\n",
     "        )\n",
-    "        loader = TimeSeriesLoader(\n",
-    "            self.train_dataset,\n",
-    "            tokenizer=self.tokenizer,\n",
-    "            num_workers=self.num_workers,\n",
-    "            batch_sampler=sampler\n",
-    "        )\n",
+    "        # loader = TimeSeriesLoader(\n",
+    "        #     self.train_dataset,\n",
+    "        #     tokenizer=self.tokenizer,\n",
+    "        #     num_workers=self.num_workers,\n",
+    "        #     batch_sampler=sampler\n",
+    "        # )\n",
     "        return loader\n",
     "    \n",
     "    def val_dataloader(self):\n",
